# AirQualitySystem

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  fix_database.sh  index.html  pyproject.toml  requirements.txt
archive/etl_scripts/: create_normalized_schema.sql  download_cams_all.py  normalize_data.py
backend/application/: apps.py
backend/application/api/: data_views.py  urls.py  views.py
backend/core/: celery.py  settings.py  urls.py  wsgi.py
backend/domain/: __init__.py  apps.py
backend/domain/migrations/: 0001_initial.py
backend/domain/models/: __init__.py  air_quality.py  data_models.py
backend/infrastructure/: apps.py
backend/presentation/: __init__.py  apps.py  urls.py  views.py
backend/presentation/templates/: about.html  base.html  dashboard.html  patterns.html
docker/: 01-init-schema.sql  02-load-data.sh  init-db.sql
docs/: data_collection_log.md  implementation_log.md
docs/thesis/: chapter1_latex.tex  chapter2_english_gemini_review.tex  reference_list.txt  references.bib  thesis.tex
scripts/: cleanup_and_reload.py  collect_aqicn_data.py  collect_cams_data.py  collect_openaq_historical.py  collect_openmeteo_weather.py  load_all_to_postgres.py  load_historical_data.py  search_openaq_sensors.py  verify_database.py
src/application/: __init__.py  apps.py
src/core/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/domain/: apps.py
src/infrastructure/: __init__.py  apps.py
src/presentation/: apps.py  urls.py  views.py
tests/: test_aqicn_api.py  test_openaq_api.py
(+12 files in other folders)
